# luckytap

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml
src/luckytap/: __init__.py  __main__.py  capture.py  cli.py  clicker.py  config.py  detect.py  wechat.py
